--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,11 +12,11 @@
     <form class="form-inline" action="/login" th:action="@{/login}" method="post">
         <div class="form-group">
             <label for="email">Email address:</label>
-            <input type="email" class="form-control" groupId="email" groupName="username">
+            <input type="email" class="form-control" groupid="email" groupName="username">
         </div>
         <div class="form-group">
             <label for="pwd">Password:</label>
-            <input type="password" class="form-control" groupId="pwd" groupName="password">
+            <input type="password" class="form-control" groupid="pwd" groupName="password">
         </div>
         <div class="checkbox">
             <label><input type="checkbox">Remember me</label>
